--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -31,18 +31,17 @@
 
         <activity
             android:name=".SamsungDozeActivity"
-            android:label="@string/ambient_display_title"
+            android:label="@string/screen_gestures_panel_title"
             android:theme="@style/SamsungDozeSettings">
             <intent-filter>
-                <action android:name="org.cyanogenmod.settings.device.DOZE_SETTINGS" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
             <meta-data
-                android:name="org.cyanogenmod.settings.summary.receiver"
-                android:value="com.cyanogenmod.settings.doze.DozeReceiver" />
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.device" />
             <meta-data
-                android:name="org.cyanogenmod.settings.summary.key"
-                android:value="doze_device_settings" />
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_settings_gestures" />
         </activity>
 
     </application>
