--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -30,9 +30,9 @@
         </service>
 
         <activity
-            android:name=".SamsungDozeActivity"
+            android:name=".TouchscreenGestureSettings"
             android:label="@string/screen_gestures_panel_title"
-            android:theme="@style/SamsungDozeSettings">
+            android:theme="@android:style/Theme.Material.Settings">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
